fix node search list height on mobile (again)

--- a/src/scss/style.css
+++ b/src/scss/style.css
@@ -1022,8 +1022,8 @@ span.add-node:after {
     top: 40px !important;
   }
 
-  .menu:hover .dropdown .shrink-when-narrow{
-    max-height: 45vh;
+  .menu:hover .dropdown.shrink-when-narrow {
+    max-height: 45vh !important;
   }
 
   #linkHelperMenuFilter {
